--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="row" >
      <div class="col-md-12 col-sm-12" style="padding-bottom:5px;padding-left:0px;padding-right:0px;">
          <div class="col-md-6 col-sm-6" style="padding-top:0px;padding-left:0px;">
-          <h1 class="navbar-brand navbar-brand_" style="padding-top:0px;padding-bottom:0px;"><a href="index.html"><img alt="" src="images/logo.png" width="100%" height="10%" align="middle"></a></h1>
+          <h1 class="navbar-brand navbar-brand_" style="padding-top:0px;padding-bottom:0px;"><a href="index.html"><img alt="" class="resize" src="images/logo.png" width="100%" height="10%" align="middle"></a></h1>
          </div>
          
          
