--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <link rel="shortcut icon" href="images/vlvglogo-english-ashwinlodaya.jpg">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="keywords" content="">
-<meta name="description" content="">    
+<meta name="keywords" content="hostel">
+<meta name="description" content="Hostel,A Home Away From Home."/>    
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="css/templatemo-style.css">
